--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app",
-	"nodemon": "nodemon app"
+	  "nodemon": "nodemon app"
   },
   "author": "Maxim Zelensky",
   "license": "ISC",
@@ -13,5 +13,8 @@
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "socket.io": "^2.0.4"
+  },
+  "opencv4nodejs": {
+    "disableAutoBuild": 1
   }
 }
